--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
 
 <h2> 指導大專生研究計畫</h2>
 <ul>
+  <li> 113年度 黃子珈 利用Quest3結合虛實世界與穩定度分析的互動樂高建造系統 (未獲通過) </li>
+  <li> 113年度 陳彥霖 3D摺紙：MR互動設計之立體紙藝作品 (未獲通過) </li>
   <li> 112年度 江佳蓉 VR/XR沉浸式立體串珠教學系統 (計畫編號：112-2813-C-130-023-E) </li>
   <li> 112年度 林誼如 模擬針戳羊毛氈娃娃之應用 (計畫編號：112-2813-C-130-024-E) </li>
   <li> 111年度 周玠妘 高度還原3D虛擬互動穿衣 (計畫編號：111-2813-C-130-047-E) </li>
